--- a/app/src/main/res/layout/admin_activity_login.xml
+++ b/app/src/main/res/layout/admin_activity_login.xml
@@ -11,7 +11,11 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="AdminLogin"
+        android:layout_marginTop="90dp"
+        android:text="Admin Login Page"
+        android:textSize="@dimen/titleTextSize"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -94,6 +98,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Don't have an account? SIGN UP"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
