--- a/app/src/main/res/layout/user_activity_login.xml
+++ b/app/src/main/res/layout/user_activity_login.xml
@@ -11,7 +11,10 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="UserLogin"
+        android:layout_marginTop="90dp"
+        android:text="User Login Page"
+        android:textSize="@dimen/titleTextSize"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
