--- a/app/src/main/res/layout/user_fragment_home.xml
+++ b/app/src/main/res/layout/user_fragment_home.xml
@@ -26,11 +26,9 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="48dp"
-            android:layout_height="42dp"
-            android:layout_marginStart="30dp"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/icon_profile"
+            android:layout_width="128dp"
+            android:layout_height="83dp"
+            android:src="@drawable/fundraisingpicture"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
