--- a/app/src/main/res/layout/user_fragment_notification.xml
+++ b/app/src/main/res/layout/user_fragment_notification.xml
@@ -17,19 +17,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="30dp"
             android:text="@string/userNotificationLabel"
             android:textColor="@color/smallTextColor"
             android:textSize="@dimen/smallTitle"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/userFeedbackButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="20dp"
             android:text="Feedback"
             app:layout_constraintEnd_toEndOf="parent"
@@ -60,9 +60,10 @@
             android:layout_height="46dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="15dp"
+            android:src="@drawable/icon_profile"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:src="@drawable/icon_profile" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/imageView3"
